--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header> 
         <div class="cabecalho">                        
         <h1 id="menu">CURRÍCULO - MAYSA GARCIA CARDOSO</h1>        
-        <img src="C:\Users\Usuario\Desktop\site curriculo\imagens\perfil.jpeg" alt="foto-do-perfil" title="foto perfil" style="border-radius:50%;width: 12%;"></div>    
+        <img src="C:\Users\Usuario\Desktop\site curriculo\imagens\perfil.jpeg" alt="perfil" title="foto perfil" style="border-radius:50%;width: 12%;"></div>    
     </header>
       <head>
     <ul>
