--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header> 
         <div class="cabecalho">                        
         <h1 id="menu">CURRÍCULO - MAYSA GARCIA CARDOSO</h1>        
-        <img src="C:\Users\Usuario\Desktop\site curriculo\imagens\perfil.png" id="perfil" style="border-radius:50%;width: 12%;"></div>    
+        <img src="https://maysagc.github.io/CurriculoMaysa/imagens/perfil.png" id="perfil" style="border-radius:50%;width: 12%;"></div>    
     </header>
     
     <head>        
